<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity">
    <ImageView
        android:paddingRight="@dimen/padding_10"
        android:paddingTop="@dimen/padding_10"
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo_login"
        android:layout_marginBottom="@dimen/padding_10" />
    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/userid" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_user"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true"
                    android:drawableLeft="@mipmap/ic_username"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    android:drawableLeft="@mipmap/ic_pwd"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" android:weightSum="2"
                android:padding="@dimen/activity_vertical_margin"
                android:gravity="center">
                />
            <Button android:id="@+id/sign_in_button" style="@style/btn_blue_large"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:layout_weight="1"
                android:textStyle="bold" />
            <Button android:id="@+id/register_button" style="@style/btn_blue_large"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/action_register"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
