<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.chatt.Login" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_20"
        android:paddingLeft="@dimen/padding_15"
        android:paddingRight="@dimen/padding_15"
        android:paddingTop="@dimen/padding_20" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_20"
            android:src="@mipmap/logo_login" />

        <EditText
            android:id="@+id/email"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_username"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/user"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_5"
            android:drawableLeft="@mipmap/ic_username"
            android:hint="@string/prompt_user" >
        </EditText>

        <EditText
            android:id="@+id/pwd"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_20"
            android:layout_marginTop="@dimen/padding_5"
            android:drawableLeft="@mipmap/ic_pwd"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" >
        </EditText>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnReg"
                style="@style/btn_blue_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_10"
                android:layout_weight="1"
                android:text="@string/action_register" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>